# AreaOfResponsibility

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/: AORMath.hpp  DislocationPoint.hpp  DrawableModel.hpp  DynamicProgrammingSolver.hpp  GeneticAlgorithmAdvancedSolver.hpp  GeneticAlgorithmSolver.hpp  GreedyAlgorithmSolver.hpp  Line.hpp  Point.hpp  Solver.hpp  TextCircle.hpp  Timer.hpp  Utils.hpp
resources/: output.csv  outputRes.csv  plot.py
source/: AORMath.cpp  DislocationPoint.cpp  DynamicProgrammingSolver.cpp  GeneticAlgorithmAdvancedSolver.cpp  GeneticAlgorithmSolver.cpp  GreedyAlgorithmSolver.cpp  Line.cpp  TextCircle.cpp  Utils.cpp  main.cpp  main_20tests.cpp  main_genetic_tests.cpp  main_tests.cpp
